...
            FloatingActionButton(
                onClick = {
                    viewModel.onEvent(AddEditNoteEvent.SaveNote)
                },
                containerColor = MaterialTheme.colorScheme.primary
            ) {
                Icon(painter = painterResource(R.drawable.save), contentDescription = "Save")
            }
        },
        snackbarHost = { SnackbarHost(snackbarHostState) },

    ) {innerPadding ->
        Column(
...
